修改加密算法